# kairos

./: .gitignore  .mcp.json  ACTIVATION_FUNNEL.md  CLAUDE.md  DEPLOYMENT.md  DISTRIBUTION.md  DISTRIBUTION_ALL.md  LICENSE  OUTREACH.md  PROFILES.md  README.md  USER_RESEARCH.md  demo_failure.py  deploy.ps1  package-lock.json  package.json  vercel.json
.claude/: settings.json
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.claude/helpers/: statusline.cjs
.github/profile/: README.md
.swarm/: memory.db  memory.db-shm  memory.db-wal  schema.sql
blog/: agent-failures.md  agent-governance.md  eu-ai-act-agents.md  portkey-alternative.md  replay-vs-logs.md
brand/: brand_assets.html  brand_guidelines.md  social_templates.html
examples/: autogen_integration.py  crewai_integration.py  langchain_integration.py  langgraph_integration.py  llamaindex_integration.py  openai_agents_integration.py  quickstart.py  quickstart.ts
kairos-core/: .env.example  docker-compose.yml  railway.json  requirements.txt  seed.py
kairos-core/app/: config.py  database.py  main.py  models.py  schemas.py
kairos-core/app/routers/: approvals.py  events.py  feedback.py  ingest.py  replay.py  (+2 more)
kairos-sdk/: README.md  package.json
kairos-sdk-python/: README.md  pyproject.toml
kairos-sdk-python/src/kairos/: __init__.py  client.py
kairos-sdk/src/: index.ts
kairos-web/: .gitignore  next.config.ts  package-lock.json  package.json
kairos-web/public/: demo.html  index.html
(+12 files in other folders)
