[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kairos-trace"
version = "0.1.0"
description = "Kairos SDK — instrument autonomous systems in 3 lines"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["kairos", "ai", "agents", "tracing", "observability", "replay", "autonomous"]
dependencies = []

[project.optional-dependencies]
http = ["httpx>=0.25.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/kairos"]
